# quant

./: README.md  SKILLS-NEEDED.md  justfile  pyproject.toml
.claude/: CLAUDE.md
.claude/rules/: my-skills.md  repo-layout-files.md
DrakonixBacktester/: __init__.py  engine.py  metrics.py  strategy.py
DrakonixBacktester/mutationengine/: __init__.py  daemon.py  engine.py  gui.py  tkgui.py
DrakonixBacktester/store/: __init__.py  db.py
DrakonixBacktester/strategies/: __init__.py  bollinger_bands.py  buy_and_hold.py  donchian_breakout.py  rsi_trend_filter.py  sma_crossover.py  time_series_momentum.py
lessons/backtesting/: 01_intro_to_drakonix.ipynb  02_experimental_strategies.ipynb  03_mutation_engine.ipynb
lessons/stats/: 01_distributions.ipynb
lessons/stats/homework/: 01_distributions_hw.ipynb
